# MediaLyze

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  ca_profile.xml  docker-compose-dev.yaml  docker-compose-prod.yaml  docker-compose.yaml  pyproject.toml
.github/: FUNDING.yml
desktop/: ffmpeg-paths.cjs  ffmpeg-paths.test.cjs  ffprobe-paths.cjs  ffprobe-paths.test.cjs  main.cjs  package-files.test.cjs  package-lock.json  package.json  package.test.cjs  preload.cjs  update-download.cjs  update-download.test.cjs
docker/: docker-compose-ENV.yaml  docker-compose-dev.yaml  docker-compose.yaml  env.example
docs/: adding-languages.md  build_desktop.md  compatibility-profiles.md  ignore_files_folders.md  patterns.md  supported_metadata.md  telemetry.md
frontend/: globals.css  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
scripts/: dev-local.ps1  dev-local.sh  local_start.ps1  local_start.sh
templates/: medialyze.xml
tests/: test_api_routes.py  test_app_settings.py  test_browse.py  test_compatibility.py  test_db_session.py  test_duplicate_detection.py  test_duplicates.py  test_ffprobe_parser.py  test_glob_patterns.py  test_history_services.py  test_library_service.py  test_main.py  test_media_extensions.py  test_media_service.py  test_path_access.py  test_pathing.py  test_perceptual_duplicates.py  test_quality.py  test_release_metadata.py  test_runtime.py  test_runtime_dependencies.py  test_scan_jobs.py  test_scanner.py  test_stats.py  (+4 more)
(+227 files in other folders)
