[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medialyze"
version = "0.15.0"
description = "Self-hosted media library analyzer for technical video metadata."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0" }
authors = [
  { name = "Frederik Emmer" }
]
dependencies = [
  "apscheduler>=3.10.4,<4",
  "certifi>=2026.2.25",
  "fastapi>=0.116.1,<1",
  "pydantic>=2.8.0,<3",
  "pydantic-settings>=2.8.1,<3",
  "psutil>=7.0.0,<8",
  "sqlalchemy>=2.0.39,<3",
  "tzlocal>=5.2,<6",
  "uvicorn[standard]>=0.34.0,<1",
  "watchdog>=6.0.0,<7",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1,<1",
  "pytest>=9.0.3,<10",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
